# TradingMTQDashboard

./: .env  .env.backup  .env.example  .gitignore  .gitmodules  ANALYSIS_MT5_CODE_COMPARISON.md  CHANGES.txt  CLI_USAGE.md  DASHBOARD_INTEGRATION.md  ENHANCEMENT_DESIGN_old.md  LIVE_TRADING_GUIDE.md  ML_COMPLETE.md  ML_INTEGRATION.md  ML_QUICK_START.md  MODELS_MIGRATION.md  MT5_SOCKET_TEST_INSTRUCTIONS.md  PHASE1_COMPLETE.md  PHASE1_STATUS.md  PHASE2_COMPLETE.md  QUICK_REFERENCE.md  README.md  START_HERE.md  SUMMARY.txt  SYSTEM_ANALYSIS.md  USAGE.md  aggressive_test.py  alembic.ini  alerts.html  charts.html  check_env.py  check_positions.py  command.txt  config.html  ia-prompt-project.md  main.py  mtinfo.yml  package-lock.json  package.json  pip_calculator.py  playwright.config.ts  (+15 more)
.claude/: settings.local.json
.github/workflows/: python-tests.yml  status-check.yml  test.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  756dae056c20_add_account_connection_state_tracking_.py  9f0df884bcb0_add_account_currency_configs.py  a9392368ae24_add_account_configuration_columns.py  b7c8e9f1d2a3_add_available_currencies_table.py  fb250ac2e995_add_platform_type_to_trading_accounts.py
config/: currencies.yaml  currencies_aggressive.yaml  currencies_optimized_interval.yaml  email.example.yaml  mt5_config.yaml
config/accounts/: README.md  account-001.yml.example  account-002.yml.example  default.yml
css/: positions.css  reports.css
dashboard/: README.md  accounts.html  currencies.html  index.html  positions.html  reports.html  test-quick-trade-only.html
dashboard/css/: accounts.css  currencies.css  styles.css
dashboard/js/: account-config.js  accounts.js  advanced-charts.js  api.js  config.js  currencies.js  dashboard.js  default-currencies.js  positions.js  quick-trade.js  reports.js  worker-connector.js
data/models/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
deploy/: README.md
deploy/macos/: .env.template  MACOS_QUICK_START.md  setup.sh
deploy/windows/: .env.template  WINDOWS_QUICK_START.md  quick-start.bat  setup.ps1
docs/: ACCOUNTS_UI_BUG_FIXES_2025-12-28.md  ACCOUNT_BROKER_VALIDATION_FIX.md  ADD_CURRENCY_FEATURE.md  AGGRESSIVE_TRADING_GUIDE.md  AI_ENHANCED_TRADING.md  ALERTS.md  CLI_IMPLEMENTATION.md  CODEBASE_ANALYSIS_AND_IMPLEMENTATION_PLAN.md  COMPLETE_PROJECT_STATUS.md  COMPLETE_SETUP_AND_RUN_GUIDE.md  COMPLETE_SYSTEM_FLOW.md  CONFIGURATION_IMPLEMENTATION_STATUS.md  CONFIG_MANAGER_IMPLEMENTATION.md  DASHBOARD_API_FIXES_2025-12-28.md  DEFAULT_CURRENCIES_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PACKAGE_COMPLETE.md  DOCUMENTATION_ORGANIZATION.md  ENTRY_POINTS_EXPLAINED.md  FEATURE_3_PLAN.md  FEATURE_PROGRESS.md  GETTING-STARTED.md  HOW_ML_MODEL_WAS_CREATED.md  IMPLEMENTATION_SUMMARY.md  MACOS_SETUP_VALIDATED.md  MT4_IMPLEMENTATION_SUMMARY.md  MT4_INTEGRATION_GUIDE.md  MT4_MAC_LIMITATIONS.md  MT4_QUICK_START_MAC.md  MT5_IMPLEMENTATION_SUMMARY.md  MT5_QUICK_START_MAC.md  MULTI_ACCOUNT_FIX_SUMMARY.md  PACKAGE-OVERVIEW.md  PHASE_4.5_COMPLETE.md  PHASE_4.5_PROGRESS.md  PHASE_5.1_COMPLETE.md  PRIORITIZED_IMPLEMENTATION_PHASES.md  PRIORITY_CHECKLIST.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PROFIT_MAXIMIZATION_STRATEGY.md  (+10 more)
docs/05-status/: TODO.md  (+6 more)
examples/: backtest_demo.py  demo_logger.py  demo_multi_currency_oop.py  enhanced_features_demo.py  fast_trading.py  features_demo_no_connection.py  live_trading.py  manage_positions.py  modify_positions.py  oop_flow_demo.py  phase2_demo.py  phase2_quick_test.py  phase3_ml_demo.py  phase4_llm_demo.py  preflight_check.py  quick_start.py  run_multi_currency.py  test_connection.py
js/: account-manager.js  alerts.js  currencies.js  quick-trade.js  websocket.js
models/: .gitkeep  README.md
mql4/: README.md  mt4_bridge_server.mq4
scripts/: Backup current dashboard first.sh  README.md  activate_aggressive.sh  add_account.py  calculate_profit_scenarios.py  check_autotrading.py  check_readiness.py  check_signal.py  check_status.py  close_all_positions.py  collect_data.py  create_account_currency_configs_table.py  create_account_currency_table_direct.sh  create_available_currencies_table.py  init_database.py  prepare_features.py  seed_available_currencies.py  start_mt5.py  test_ml_integration.py  test_signal_simple.py  train_all.py  train_ml_model.py  train_models.py
src/: App.tsx  __init__.py  bot.py  config_manager.py  exceptions.py  index.css  main.py  main_old.py
tests/: .gitkeep  README.md  __init__.py  conftest.py  test_accounts.py  test_alerts.py  test_all_functions.py  test_analytics.py  test_analyzer.py  test_api.py  test_base.py  test_bb_strategy.py  test_charts.py  test_cli.py  test_config.py  test_config_manager.py  test_config_service.py  test_connector_factory.py  test_controller.py  test_currencies_api.py  test_currency_integration.py  test_currency_models.py  test_currency_trader.py  test_database.py  test_email_service.py  test_error_descriptions.py  test_factory.py  test_indicators_main.py  test_integration.py  test_logger.py  test_macd_strategy.py  test_market_hours.py  test_ml_base.py  test_ml_strategy.py  test_model_loader.py  test_models.py  test_mt5_connector.py  test_multi_indicator.py  test_orchestrator.py  test_position_manager.py  (+12 more)
(+329 files in other folders)
