[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingmtq"
version = "2.0.0"
description = "Advanced Multi-Currency Trading Bot for MetaTrader 5 with ML Enhancement"
readme = "README.md"
authors = [{name = "5kipp3rm"}]
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["trading", "mt5", "metatrader", "forex", "machine-learning"]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "click>=8.1.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "colorlog>=6.7.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# Windows-only dependencies for production trading
trading = [
    "MetaTrader5>=5.0.45",
]
# Full ML stack including deep learning
ml-full = [
    "tensorflow>=2.14.0",
    "optuna>=3.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
# LLM providers
llm = [
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]
# PostgreSQL support
postgres = [
    "psycopg2-binary>=2.9.9",
]
# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.1",
]

[project.scripts]
tradingmtq = "src.cli:cli"
mtq = "src.cli:cli"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src", "src.cli", "src.trading", "src.strategies", "src.connectors", "src.ml", "src.llm", "src.indicators", "src.backtest", "src.analysis", "src.optimization", "src.utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=html --cov-report=term"
