[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingmtq"
version = "2.0.0"
description = "Advanced Multi-Currency Trading Bot for MetaTrader 5 with ML Enhancement"
readme = "README.md"
authors = [{name = "5kipp3rm"}]
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["trading", "mt5", "metatrader", "forex", "machine-learning"]

dependencies = [
    # Data Processing
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    # Configuration & Environment
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    # CLI Framework
    "click>=8.1.0",
    # Database
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    # Logging
    "colorlog>=6.7.0",
    # HTTP Requests
    "requests>=2.31.0",
    # ML Core (lightweight)
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    # Web API
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    # Background Jobs
    "apscheduler>=3.10.4",
    # Report Generation
    "reportlab>=4.0.7",
    "pillow>=10.1.0",
]

[project.optional-dependencies]
# Windows-only: MT5 trading (production)
mt5 = [
    "MetaTrader5>=5.0.5430",
]

# Machine Learning: Full ML stack with deep learning
ml = [
    "tensorflow>=2.14.0",
    "optuna>=3.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

# LLM: AI/LLM integration (OpenAI, Anthropic)
llm = [
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "beautifulsoup4>=4.12.0",
]

# PostgreSQL: Production database
postgres = [
    "psycopg2-binary>=2.9.9",
]

# Development: Testing and code quality tools
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.23.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.1",
]

# All features: Install everything
all = [
    "tradingmtq[mt5,ml,llm,postgres,dev]",
]

[project.scripts]
tradingmtq = "src.cli:cli"
mtq = "src.cli:cli"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src", "src.cli", "src.trading", "src.strategies", "src.connectors", "src.ml", "src.llm", "src.indicators", "src.backtest", "src.analysis", "src.optimization", "src.utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=html --cov-report=term"
